# voting-be-rust

./: Cargo.toml  Dockerfile
k8s/: deployment.yaml  service.yaml
