[package]
name = "voting-be"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "votingd"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.89"
axum = "0.7.7"
reqwest = "0.12.8"
